[project]
name = "risk-monitor"
version = "0.1.0"
description = "Agentic framework for monitoring codebase risk and ranking commits by risk score"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.14",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.7",
    "GitPython>=3.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "streamlit>=1.36",
    "pandas>=2.2",
    "altair>=5.3",
    "numpy<2.0",
]

[project.scripts]
risk-monitor = "risk_monitor.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["risk_monitor*"]
